refactor: bump nw model
